--- a/dummy-cache-cluster/pom.xml
+++ b/dummy-cache-cluster/pom.xml
@@ -19,7 +19,7 @@
 		<mule.tools.version>1.2</mule.tools.version>
 
 		<ignite.version>2.6.0</ignite.version>
-		<apache-ignite-connector.version>2.6.0</apache-ignite-connector.version>
+		<apache-ignite-connector.version>2.6.1</apache-ignite-connector.version>
 	</properties>
 
 	<build>
@@ -122,7 +122,7 @@
 			<version>${mule.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- The connector -->
 		<dependency>
 			<groupId>com.hawkore.mule.connectors</groupId>
@@ -146,6 +146,11 @@
 			<artifactId>ignite-slf4j</artifactId>
 			<version>${ignite.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.ignite</groupId>
+			<artifactId>ignite-spring</artifactId>
+			<version>${ignite.version}</version>
+		</dependency>
 
 		<!-- for testing -->
 		<dependency>
@@ -154,7 +159,7 @@
 			<version>${mule.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 	</dependencies>
 
 	<repositories>
