--- a/exclusive-access/pom.xml
+++ b/exclusive-access/pom.xml
@@ -19,7 +19,7 @@
 		<mule.tools.version>1.7</mule.tools.version>
 
 		<ignite.version>2.6.0</ignite.version>
-		<apache-ignite-connector.version>2.6.0</apache-ignite-connector.version>
+		<apache-ignite-connector.version>2.6.1</apache-ignite-connector.version>
 	</properties>
 
 	<build>
@@ -150,6 +150,11 @@
 		<dependency>
 			<groupId>org.apache.ignite</groupId>
 			<artifactId>ignite-slf4j</artifactId>
+			<version>${ignite.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.ignite</groupId>
+			<artifactId>ignite-spring</artifactId>
 			<version>${ignite.version}</version>
 		</dependency>
 
